# speaking-clock

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  clock.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/horavox/: at.py  cli.py  clock.py  completion.py  config.py  core.py  install.py  list.py  main.py  now.py  registry.py  remove.py  service.py  stop.py  update.py  voice.py
tests/: test_cli.py  test_commands.py  test_core.py  test_install.py
