[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "horavox"
version = "0.2.0"
description = "HoraVox - a multi-language speaking clock using local AI voice models"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    {name = "Jakub T. Jankiewicz", email = "me@jcubic.pl"},
]
keywords = ["tts", "text-to-speech", "clock", "piper", "speaking-clock", "accessibility"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "piper-tts",
    "daemonize",
    "inquirer",
]

[project.urls]
Homepage = "https://github.com/jcubic/horavox"
Repository = "https://github.com/jcubic/horavox"
Issues = "https://github.com/jcubic/horavox/issues"

[project.scripts]
vox = "horavox.main:main"
vox-clock = "horavox.clock:main"
vox-now = "horavox.now:main"
vox-stop = "horavox.stop:main"
vox-list = "horavox.list:main"
vox-voice = "horavox.voice:main"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
horavox = ["data/**/*"]
